--- a/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
+++ b/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
@@ -16,6 +16,9 @@ oses:
 # lang = en_US
 #   System locale
 #
+# keyboard = us
+#   System keyborad layout
+#
 <%
   options = []
   if @host.params['blacklist']
@@ -25,7 +28,7 @@ oses:
     options << "auto=true"
     options << "domain=#{@host.domain}"
   else
-    options << 'console-setup/ask_detect=false console-setup/layout=USA console-setup/variant=USA keyboard-configuration/layoutcode=us localechooser/translation/warn-light=true localechooser/translation/warn-severe=true'
+    options << "console-setup/ask_detect=false console-setup/layout=USA console-setup/variant=USA keyboard-configuration/layoutcode=#{@host.params['keyboard'] || 'us'} localechooser/translation/warn-light=true localechooser/translation/warn-severe=true"
   end
   options << "locale=#{@host.params['lang'] || 'en_US'}"
   options = options.join(' ')
