--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -137,8 +137,22 @@ exec < /dev/tty3 > /dev/tty3
 #changing to VT 3 so that we can see whats going on....
 /usr/bin/chvt 3
 (
+
+# Override udev net-rules on el7
+<% if @host.operatingsystem.family == 'Redhat' and @host.operatingsystem.major.to_i >= 7 -%>
+mkdir -p /etc/udev/rules.d/60-net.rules
+# Add "net.ifnames=0"
+/usr/bin/sed -i -e 's/quiet/net.ifnames=0 quiet/' /etc/default/grub
+/usr/sbin/grub2-mkconfig -o /boot/grub2/grub.cfg
+<% end -%>
+
 <% if subnet.respond_to?(:dhcp_boot_mode?) -%>
 <%= snippet 'kickstart_networking_setup' %>
+<% end -%>
+
+# **** Disable NetworkManager on el7
+<% if @host.operatingsystem.family == 'Redhat' and @host.operatingsystem.major.to_i >= 7 -%>
+/usr/bin/systemctl disable NetworkManager.service
 <% end -%>
 
 #update local time
@@ -155,10 +169,6 @@ echo 'proxy = <%= proxy_uri %>' >> /etc/yum.conf
 <%= snippet 'epel' -%>
 <% end -%>
 
-<% if @host.info['parameters']['realm'] && @host.realm && @host.realm.realm_type == 'FreeIPA' -%>
-<%= snippet 'freeipa_register' %>
-<% end -%>
-
 <% unless @host.param_false?('package_upgrade') -%>
 # update all the base packages from the updates repository
 if [ -f /usr/bin/dnf ]; then
@@ -170,19 +180,11 @@ fi
 
 <%= snippet('remote_execution_ssh_keys') %>
 
-<% if chef_enabled %>
-<%= snippet 'chef_client' %>
-<% end -%>
-
 <% if puppet_enabled %>
 <% if @host.param_true?('enable-puppetlabs-pc1-repo') || @host.param_true?('enable-puppetlabs-repo') -%>
 <%= snippet 'puppetlabs_repo' %>
 <% end -%>
-<%= snippet 'puppet_setup' %>
-<% end -%>
-
-<% if salt_enabled %>
-<%= snippet 'saltstack_setup' %>
+<%= snippet 'webcrux puppet_setup' %>
 <% end -%>
 
 <% if @host.operatingsystem.name == 'OracleLinux' && @host.param_true?('disable-uek') -%>
