--- a/provisioning_templates/finish/preseed_default_finish.erb
+++ b/provisioning_templates/finish/preseed_default_finish.erb
@@ -33,7 +33,7 @@ oses:
 <% if @host.param_true?('enable-puppetlabs-pc1-repo') || @host.param_true?('enable-puppetlabs-repo') -%>
 <%= snippet 'puppetlabs_repo' %>
 <% end -%>
-<%= snippet 'webcrux puppet_setup' %>
+<%= snippet 'webcrux_puppet_setup' %>
 <% end -%>
 
 <%= snippet 'preseed_networking_setup' %>
