--- a/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
+++ b/provisioning_templates/PXELinux/preseed_default_pxelinux.erb
@@ -31,6 +31,7 @@ oses:
     options << "console-setup/ask_detect=false console-setup/layout=USA console-setup/variant=USA keyboard-configuration/layoutcode=#{@host.params['keyboard'] || 'us'} localechooser/translation/warn-light=true localechooser/translation/warn-severe=true"
   end
   options << "locale=#{@host.params['lang'] || 'en_US'}"
+  options << "net.ifnames=0"
   options = options.join(' ')
 -%>
 
