Make sure we get the correct if names

--- a/provisioning_templates/PXELinux/kickstart_default_pxelinux.erb
+++ b/provisioning_templates/PXELinux/kickstart_default_pxelinux.erb
@@ -14,7 +14,7 @@ oses:
 
   # Tell Anaconda to perform network functions with boot interface
   #  both current and legacy syntax provided
-  options = ["network", "ksdevice=bootif", "ks.device=bootif"]
+  options = ["network", "ksdevice=bootif", "ks.device=bootif", "net.ifnames=0"]
   if mac
     bootif = '00-' + mac.gsub(':', '-')
     options.push("BOOTIF=#{bootif}")
