Updated to version 1.17

--- a/provisioning_templates/PXELinux/kickstart_default_pxelinux.erb
+++ b/provisioning_templates/PXELinux/kickstart_default_pxelinux.erb
@@ -1,6 +1,7 @@
 <%#
 kind: PXELinux
-name: kickstart_default_pxe
+name: Kickstart default PXELinux
+model: ProvisioningTemplate
 oses:
 - CentOS
 - Fedora
@@ -51,15 +52,15 @@ oses:
   if @host.operatingsystem.name.match(/Atomic/i)
     options.push("inst.repo=#{@host.operatingsystem.medium_uri(@host)}")
   end
-
-  if @host.params['blacklist']
-    options.push("modprobe.blacklist=" + @host.params['blacklist'].gsub(' ', ''))
+  
+  if host_param('blacklist')
+    options.push("modprobe.blacklist=" + host_param('blacklist').gsub(' ', ''))
   end
 
   ksoptions = options.join(' ')
 -%>
 
-TIMEOUT <%= @host.params['loader_timeout'] || 10 %>
+TIMEOUT <%= host_param('loader_timeout') || 10 %>
 DEFAULT <%= template_name %>
 
 LABEL <%= template_name %>
