--- a/provisioning_templates/finish/preseed_default_finish.erb
+++ b/provisioning_templates/finish/preseed_default_finish.erb
@@ -1,6 +1,7 @@
 <%#
 kind: finish
-name: preseed_default_finish
+name: Preseed default finish
+model: ProvisioningTemplate
 oses:
 - Debian
 - Ubuntu
@@ -8,8 +9,8 @@ oses:
 <%
   # safemode renderer does not support unary negation
   pm_set = @host.puppetmaster.empty? ? false : true
-  puppet_enabled = pm_set || @host.param_true?('force-puppet')
-  salt_enabled = @host.params['salt_master'] ? true : false
+  puppet_enabled = pm_set || host_param_true?('force-puppet')
+  salt_enabled = host_param('salt_master') ? true : false
   chef_enabled = @host.respond_to?(:chef_proxy) && @host.chef_proxy
 %>
 
@@ -27,14 +28,26 @@ oses:
 /bin/echo <%= @host.shortname %> > /etc/hostname
 <% end -%>
 
+<% if host_enc['parameters']['realm'] && @host.realm && @host.realm.realm_type == 'FreeIPA' -%>
+<%= snippet 'freeipa_register' %>
+<% end -%>
+
 <%= snippet('remote_execution_ssh_keys') %>
-<%= snippet 'preseed_networking_setup' %>
+
+<% if chef_enabled %>
+<%= snippet 'chef_client' %>
+<% end -%>
 
 <% if puppet_enabled %>
-<% if @host.param_true?('enable-puppetlabs-pc1-repo') || @host.param_true?('enable-puppetlabs-repo') -%>
+<% if host_param_true?('enable-puppetlabs-pc1-repo') || host_param_true?('enable-puppetlabs-repo') || host_param_true?('enable-puppetlabs-puppet5-repo') -%>
 <%= snippet 'puppetlabs_repo' %>
 <% end -%>
 <%= snippet 'webcrux_puppet_setup' %>
 <% end -%>
 
+<% if salt_enabled %>
+<%= snippet 'saltstack_setup' %>
+<% end -%>
+
+<%= snippet 'preseed_networking_setup' %>
 /usr/bin/wget --no-proxy --quiet --output-document=/dev/null --no-check-certificate <%= foreman_url('built') %>
